refactor: clean up book-related controllers